plot of variation

--- a/notebooks/validation_results.ipynb
+++ b/notebooks/validation_results.ipynb
@@ -26,6 +26,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "986d74e7-1d25-46a1-abfd-b23de79861d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ldpPathResult = \"../results/standard/ldp_result.json\"\n",
+    "ldpPathSummary = \"../results/standard/summary_ldp_result.json\"\n",
+    "ldpDataset = generateDatasetFromResults(ldpPathResult, ldpPathSummary, \"ldp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "aa820fab-4819-4574-8f7f-41ca3cf7d16b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b23671a4-a5a8-4bf8-834a-93884ab4c10a",
    "metadata": {},
    "outputs": [],
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1f87343b-5fa1-41f2-8848-71936ca70676",
    "metadata": {},
    "outputs": [],
@@ -61,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "067538f4-0ea6-4369-97a2-3c4c4998c429",
    "metadata": {},
    "outputs": [],
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9d457a92-ed08-4d05-8bdb-24a00b4e9bce",
    "metadata": {},
    "outputs": [],
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "21a85b37-2173-4a5b-91fd-62f7ec1cfbff",
    "metadata": {},
    "outputs": [],
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f166420e-8742-4d6b-8a83-95af4e6f5f35",
    "metadata": {},
    "outputs": [],
@@ -109,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d2462cf0-8862-46c6-ad0c-158b5e4d5e05",
    "metadata": {},
    "outputs": [],
@@ -121,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7b482e74-3248-4ea1-9228-f69fc8f235b0",
    "metadata": {},
    "outputs": [],
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cc10efbe-928f-4229-94f6-73cb6bc5929b",
    "metadata": {},
    "outputs": [],
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "cb4fa9d4-2d6a-4fa6-bdc2-c5fcefa78245",
    "metadata": {},
    "outputs": [],
@@ -157,12 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "af83c3fa-b8de-4d7c-9968-890150e2cd9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "evalInstances = [\n",
+    "    ldpDataset,\n",
     "    shapeIndexDataset,\n",
     "    shapeIndex0Dataset,\n",
     "    shapeIndex20Dataset,\n",
@@ -178,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6b1a58c5-4f04-40b0-8c8e-b1b077277eb4",
    "metadata": {},
    "outputs": [],
@@ -209,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0964e0b7-99c0-4bf1-8779-8e029fbb861c",
    "metadata": {
     "scrolled": true
@@ -218,7 +231,58 @@
     {
      "data": {
       "text/plain": [
-       "{'shapeIndex': {'interactive-discover-1': {'v0': {'same_n_results': True},\n",
+       "{'ldp': {'interactive-discover-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-2': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-3': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-6': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-7': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
+       " 'shapeIndex': {'interactive-discover-1': {'v0': {'same_n_results': True},\n",
        "   'v1': {'same_n_results': True},\n",
        "   'v2': {'same_n_results': True},\n",
        "   'v3': {'same_n_results': True},\n",
@@ -679,7 +743,7 @@
        "  'interactive-short-7': {}}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "38ee91e2-b65e-4f79-aba3-de66b4aca98c",
    "metadata": {
     "scrolled": true
@@ -720,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "d089374f-c4ea-46e5-a063-610d685e1b53",
    "metadata": {
     "scrolled": true
@@ -729,7 +793,58 @@
     {
      "data": {
       "text/plain": [
-       "{'shapeIndex': {'interactive-discover-1': {'v0': {'consistent': True},\n",
+       "{'ldp': {'interactive-discover-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-2': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-3': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-6': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-7': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
+       " 'shapeIndex': {'interactive-discover-1': {'v0': {'consistent': True},\n",
        "   'v1': {'consistent': True},\n",
        "   'v2': {'consistent': True},\n",
        "   'v3': {'consistent': True},\n",
@@ -1241,7 +1356,7 @@
        "  'interactive-short-7': {}}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
