--- a/notebooks/variation_percentage_shape_index.ipynb
+++ b/notebooks/variation_percentage_shape_index.ipynb
@@ -177,7 +177,9 @@
   {
    "cell_type": "markdown",
    "id": "ca8e2e82-0fdd-44a3-bc2b-99aad6286b8e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Single plots"
    ]
@@ -564,218 +566,6 @@
     "        \"http_request\": stat_http_req,\n",
     "        \"time\": stat_time\n",
     "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "42bd34d0-6502-4b9b-8c08-97214e5ea21a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'http_request': {'interactive-discover-1': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, 0.0, 0.0, 0.0, 0.0]},\n",
-       "  'interactive-discover-2': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, 0.0, 0.0, 0.0, 0.0]},\n",
-       "  'interactive-discover-3': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, 0.0, 0.0, 0.0, 0.0]},\n",
-       "  'interactive-discover-4': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, 0.0, 0.0, 0.0, 0.0]},\n",
-       "  'interactive-discover-5': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, 0.0, 0.0, 0.0, 0.0]},\n",
-       "  'interactive-discover-6': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [nan, 0.0, 0.0, nan, 0.0]},\n",
-       "  'interactive-discover-7': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [nan, 0.0, 0.0, nan, 0.0]},\n",
-       "  'interactive-discover-8': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-1': {'avg': 0.0,\n",
-       "   'std': 0.0,\n",
-       "   'min': 0.0,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, 0.0, 0.0, 0.0, 0.0]},\n",
-       "  'interactive-short-2': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-3': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-4': {'avg': 51.470588235294116,\n",
-       "   'std': 47.03296624172039,\n",
-       "   'min': 0.0,\n",
-       "   'max': 87.5,\n",
-       "   'raw': [87.5, 0.0, 82.35294117647058, 0.0, 87.5]},\n",
-       "  'interactive-short-5': {'avg': -23.022222222222222,\n",
-       "   'std': 49.27363755625001,\n",
-       "   'min': -111.11111111111111,\n",
-       "   'max': 0.0,\n",
-       "   'raw': [0.0, -111.11111111111111, 0.0, 0.0, -4.0]},\n",
-       "  'interactive-short-6': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-7': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]}},\n",
-       " 'time': {'interactive-discover-1': {'avg': 0.6242849358295939,\n",
-       "   'std': 1.9168044852036847,\n",
-       "   'min': -1.852183555184695,\n",
-       "   'max': 3.222244792373658,\n",
-       "   'raw': [0.6610720881339281,\n",
-       "    1.4939308990804077,\n",
-       "    3.222244792373658,\n",
-       "    -0.4036395452553294,\n",
-       "    -1.852183555184695]},\n",
-       "  'interactive-discover-2': {'avg': -0.483893538784936,\n",
-       "   'std': 1.126301926838358,\n",
-       "   'min': -2.243864377309795,\n",
-       "   'max': 0.7318417790085665,\n",
-       "   'raw': [-0.6839944220975122,\n",
-       "    0.7318417790085665,\n",
-       "    0.1896512561534589,\n",
-       "    -2.243864377309795,\n",
-       "    -0.4131019296793985]},\n",
-       "  'interactive-discover-3': {'avg': 0.8683501817149769,\n",
-       "   'std': 3.2851234199955925,\n",
-       "   'min': -4.912193836910403,\n",
-       "   'max': 3.0760241366865277,\n",
-       "   'raw': [3.0760241366865277,\n",
-       "    2.5782508442494216,\n",
-       "    -4.912193836910403,\n",
-       "    1.4677638618592472,\n",
-       "    2.1319059026900904]},\n",
-       "  'interactive-discover-4': {'avg': 1.2431989812846747,\n",
-       "   'std': 2.3432334012033094,\n",
-       "   'min': -1.2295820361589325,\n",
-       "   'max': 4.052532049244166,\n",
-       "   'raw': [4.052532049244166,\n",
-       "    -0.8563432221089561,\n",
-       "    -1.2295820361589325,\n",
-       "    1.1262381899716836,\n",
-       "    3.1231499254754116]},\n",
-       "  'interactive-discover-5': {'avg': 0.21430552422781862,\n",
-       "   'std': 3.7606303848696,\n",
-       "   'min': -6.010498635034783,\n",
-       "   'max': 3.715079767520081,\n",
-       "   'raw': [1.9911767089441077,\n",
-       "    3.715079767520081,\n",
-       "    1.6778168078613174,\n",
-       "    -0.3020470281516299,\n",
-       "    -6.010498635034783]},\n",
-       "  'interactive-discover-6': {'avg': 0.8379803908914423,\n",
-       "   'std': 2.026419995643663,\n",
-       "   'min': -1.5019085351983743,\n",
-       "   'max': 2.016162506280664,\n",
-       "   'raw': [nan,\n",
-       "    1.999687201592037,\n",
-       "    2.016162506280664,\n",
-       "    nan,\n",
-       "    -1.5019085351983743]},\n",
-       "  'interactive-discover-7': {'avg': -0.3175056120025042,\n",
-       "   'std': 1.12561586392319,\n",
-       "   'min': -0.9907729639431764,\n",
-       "   'max': 0.9819595018237244,\n",
-       "   'raw': [nan,\n",
-       "    0.9819595018237244,\n",
-       "    -0.9437033738880607,\n",
-       "    nan,\n",
-       "    -0.9907729639431764]},\n",
-       "  'interactive-discover-8': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-1': {'avg': 1.973813938728172,\n",
-       "   'std': 1.0214843397612747,\n",
-       "   'min': 0.33803837709192824,\n",
-       "   'max': 2.831357279069761,\n",
-       "   'raw': [2.6965871731435818,\n",
-       "    2.346970529323895,\n",
-       "    1.6561163350116932,\n",
-       "    2.831357279069761,\n",
-       "    0.33803837709192824]},\n",
-       "  'interactive-short-2': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-3': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-4': {'avg': 19.478289281284724,\n",
-       "   'std': 19.733314326381,\n",
-       "   'min': 1.9757939343976498,\n",
-       "   'max': 50.1445369513233,\n",
-       "   'raw': [21.020182025850097,\n",
-       "    2.1166392431057166,\n",
-       "    50.1445369513233,\n",
-       "    1.9757939343976498,\n",
-       "    22.13429425174685]},\n",
-       "  'interactive-short-5': {'avg': -13.62058528798577,\n",
-       "   'std': 16.5451493768085,\n",
-       "   'min': -34.962017548327324,\n",
-       "   'max': 0.026454240707839766,\n",
-       "   'raw': [0.026454240707839766,\n",
-       "    -27.763868496319542,\n",
-       "    -5.421577059191001,\n",
-       "    0.018082423201177908,\n",
-       "    -34.962017548327324]},\n",
-       "  'interactive-short-6': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]},\n",
-       "  'interactive-short-7': {'avg': nan,\n",
-       "   'std': nan,\n",
-       "   'min': nan,\n",
-       "   'max': nan,\n",
-       "   'raw': [nan, nan, nan, nan, nan]}}}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_object['shape index network 50%']"
    ]
   },
   {
