fix spacing issue between plots

--- a/notebooks/variation_percentage_shape_index.ipynb
+++ b/notebooks/variation_percentage_shape_index.ipynb
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "badc1292-81ca-4a23-931f-1eff61233d7f",
    "metadata": {},
    "outputs": [],
@@ -651,7 +651,7 @@
     "    fig, ax = plt.subplots(figsize=(10, 8))\n",
     "\n",
     "    for dataset, measurements in results.items():\n",
-    "        offset = width * multiplier + width/len(results)\n",
+    "        offset = width * multiplier + width/(len(results))\n",
     "        data = list(range(len(queries)))\n",
     "        for i, measurement in enumerate(measurements):\n",
     "            data[i] = measurement\n",
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "1395304b-1750-47c7-86c1-9b2acfe00670",
    "metadata": {},
    "outputs": [
