delete axis of artefact

--- a/notebooks/variation_approach.ipynb
+++ b/notebooks/variation_approach.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "54930c8f-8fa3-4248-9be8-21b2afa9d1c7",
    "metadata": {},
    "outputs": [],
@@ -601,13 +601,13 @@
     "        \"interactive-short-6\": \"S6\",\n",
     "        \"interactive-short-7\": \"S7\"\n",
     "    }\n",
-    "\n",
+    "query_to_skip = [\"D8\", \"S2\", \"S3\", \"S6\", \"S7\" ]\n",
     "queries = query_map.values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "badc1292-81ca-4a23-931f-1eff61233d7f",
    "metadata": {},
    "outputs": [],
