--- a/artefact/statistical_significance/comparaisonStateOfTheArt.tex
+++ b/artefact/statistical_significance/comparaisonStateOfTheArt.tex
@@ -1,15 +1,31 @@
-
-# Comparaison execution time shape index approach against the type index
-
-| query template         | relation execution time   | p-value                           |   average ratio HTTP request |
-|------------------------|---------------------------|-----------------------------------|------------------------------|
-| interactive-discover-1 | lesser                    | 1.14E-36                          |                         0.57 |
-| interactive-discover-2 | lesser                    | 4.42E-04                          |                         0.88 |
-| interactive-discover-3 | similar                   | 7.47E-01 (different distribution) |                         0.97 |
-| interactive-discover-4 | lesser                    | 2.07E-17                          |                         0.65 |
-| interactive-discover-5 | lesser                    | 5.58E-03                          |                         0.88 |
-| interactive-discover-6 | similar                   | 2.56E-01 (different distribution) |                         1.12 |
-| interactive-discover-7 | similar                   | 7.83E-01 (different distribution) |                         1.12 |
-| interactive-short-1    | lesser                    | 1.12E-83                          |                         0.33 |
-| interactive-short-4    | greater                   | 3.76E-22                          |                        13    |
-| interactive-short-5    | lesser                    | 3.12E-17                          |                         0.44 |
+\begin{table}
+	\begin{center}
+		\begin{tabular}{|l|l|l|l|}
+			\hline
+			query template & relation execution time & p-value & average ratio HTTP request \\
+			\hline
+			interactive-discover-1 & lesser & 0.000 & 0.570 \\
+			\hline
+			interactive-discover-2 & lesser & 0.000 & 0.880 \\
+			\hline
+			interactive-discover-3 & similar & 7.47E-01 (different distribution) & 0.970 \\
+			\hline
+			interactive-discover-4 & lesser & 0.000 & 0.650 \\
+			\hline
+			interactive-discover-5 & lesser & 0.006 & 0.880 \\
+			\hline
+			interactive-discover-6 & similar & 2.56E-01 (different distribution) & 1.120 \\
+			\hline
+			interactive-discover-7 & similar & 7.83E-01 (different distribution) & 1.120 \\
+			\hline
+			interactive-short-1 & lesser & 0.000 & 0.330 \\
+			\hline
+			interactive-short-4 & greater & 0.000 & 13 \\
+			\hline
+			interactive-short-5 & lesser & 0.000 & 0.440 \\
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{Table comparing the shape index approach to the state-of-the-art. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4, which performs worse but is already a fast-running query.}
+	\label{tab:statSignificanceStateOfTheArt}
+\end{table}
