made table smaller

--- a/artefact/statistical_significance/comparaisonStateOfTheArt.tex
+++ b/artefact/statistical_significance/comparaisonStateOfTheArt.tex
@@ -8,15 +8,15 @@
 			\hline
 			interactive-discover-2 & lesser & 0.000 & 0.880 \\
 			\hline
-			interactive-discover-3 & similar & 7.47E-01 (different distribution) & 0.970 \\
+			interactive-discover-3 & similar & 7.47E-01 (RH) & 0.970 \\
 			\hline
 			interactive-discover-4 & lesser & 0.000 & 0.650 \\
 			\hline
 			interactive-discover-5 & lesser & 0.006 & 0.880 \\
 			\hline
-			interactive-discover-6 & similar & 2.56E-01 (different distribution) & 1.120 \\
+			interactive-discover-6 & similar & 2.56E-01 (RH) & 1.120 \\
 			\hline
-			interactive-discover-7 & similar & 7.83E-01 (different distribution) & 1.120 \\
+			interactive-discover-7 & similar & 7.83E-01 (RH) & 1.120 \\
 			\hline
 			interactive-short-1 & lesser & 0.000 & 0.330 \\
 			\hline
@@ -26,6 +26,6 @@
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Table comparing the shape index approach to the state-of-the-art. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4, which performs worse but is already a fast-running query.}
+	\caption{Table comparing the shape index approach to the state-of-the-art. RH, indicate that the p-value is associated to the rejected hypothesis. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4, which performs worse but is already a fast-running query.}
 	\label{tab:statSignificanceStateOfTheArt}
 \end{table}
