kept the exponential notation in the tables

--- a/artefact/statistical_significance/comparaisonStateOfTheArt.tex
+++ b/artefact/statistical_significance/comparaisonStateOfTheArt.tex
@@ -4,25 +4,25 @@
 			\hline
 			query template & relation execution time & p-value & average ratio HTTP request \\
 			\hline
-			interactive-discover-1 & lesser & 0.000 & 0.570 \\
+			interactive-discover-1 & lesser & 1.14E-36 & 0.57 \\
 			\hline
-			interactive-discover-2 & lesser & 0.000 & 0.880 \\
+			interactive-discover-2 & lesser & 4.42E-04 & 0.88 \\
 			\hline
-			interactive-discover-3 & similar & 7.47E-01 (RH) & 0.970 \\
+			interactive-discover-3 & similar & 7.47E-01 (RH) & 0.97 \\
 			\hline
-			interactive-discover-4 & lesser & 0.000 & 0.650 \\
+			interactive-discover-4 & lesser & 2.07E-17 & 0.65 \\
 			\hline
-			interactive-discover-5 & lesser & 0.006 & 0.880 \\
+			interactive-discover-5 & lesser & 5.58E-03 & 0.88 \\
 			\hline
-			interactive-discover-6 & similar & 2.56E-01 (RH) & 1.120 \\
+			interactive-discover-6 & similar & 2.56E-01 (RH) & 1.12 \\
 			\hline
-			interactive-discover-7 & similar & 7.83E-01 (RH) & 1.120 \\
+			interactive-discover-7 & similar & 7.83E-01 (RH) & 1.12 \\
 			\hline
-			interactive-short-1 & lesser & 0.000 & 0.330 \\
+			interactive-short-1 & lesser & 1.12E-83 & 0.33 \\
 			\hline
-			interactive-short-4 & greater & 0.000 & 13 \\
+			interactive-short-4 & greater & 3.76E-22 & 13.00 \\
 			\hline
-			interactive-short-5 & lesser & 0.000 & 0.440 \\
+			interactive-short-5 & lesser & 3.12E-17 & 0.44 \\
 			\hline
 		\end{tabular}
 	\end{center}
