made table smaller

--- a/artefact/statistical_significance/comparaisonStateOfTheArt.tex
+++ b/artefact/statistical_significance/comparaisonStateOfTheArt.tex
@@ -2,7 +2,7 @@
 	\begin{center}
 		\begin{tabular}{|l|l|l|l|}
 			\hline
-			query template & relation execution time & p-value & average ratio HTTP request \\
+			query template & relation execution time & p-value & avg ratio HTTP request \\
 			\hline
 			interactive-discover-1 & lesser & 1.14E-36 & 0.57 \\
 			\hline
