--- a/artefact/statistical_significance/comparaisonStateOfTheArt.tex
+++ b/artefact/statistical_significance/comparaisonStateOfTheArt.tex
@@ -26,6 +26,6 @@
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Table comparing the shape index approach to the state-of-the-art. RH, indicate that the p-value is associated to the rejected hypothesis. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4, which performs worse but is already a fast-running query.}
+	\caption{Table comparing the shape index approach to the state-of-the-art. RH, indicate that the p-value is associated to the rejected hypothesis. Every query performs better or similarly to the state-of-the-art with the shape index approach except for interactive-short-4.}
 	\label{tab:statSignificanceStateOfTheArt}
 \end{table}
