--- a/artefact/query_containment_execution_time/minimal/table_query_shape_containment_exec.tex
+++ b/artefact/query_containment_execution_time/minimal/table_query_shape_containment_exec.tex
@@ -36,6 +36,6 @@
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Query-Shape containment computation time is negligeable with the most restrictive shapes of our experiments. The results were obtained with 100 samples.}
+	\caption{Query-Shape containment computation time (100 samples) is negligeable with the most restrictive shapes of our experiments.}
 	\label{tab:queryShapeContainmentEval}
 \end{table}
