--- a/notebooks/ratio_useful_sources.ipynb
+++ b/notebooks/ratio_useful_sources.ipynb
@@ -176,19 +176,19 @@
      "text": [
       "| Query template         |        v0 |        v1 |        v2 |         v3 |        v4 |\n",
       "|------------------------|-----------|-----------|-----------|------------|-----------|\n",
-      "| interactive-discover-1 | 0.0447761 | 0.04      | 0.0434783 | 0.0608696  | 0.0387597 |\n",
-      "| interactive-discover-2 | 0.335821  | 0.08      | 0.0869565 | 0.86087    | 0.395349  |\n",
-      "| interactive-discover-3 | 0.357692  | 0.45098   | 0.53271   | 0.605505   | 0.589286  |\n",
-      "| interactive-discover-4 | 0.0533333 | 0.137931  | 0.148148  | 0.0255319  | 0.0872483 |\n",
-      "| interactive-discover-5 | 0.0671642 | 0.08      | 0.0869565 | 0.0173913  | 0.124031  |\n",
-      "| interactive-discover-6 |           | 0.08      | 0.0869565 |            | 0.418605  |\n",
-      "| interactive-discover-7 |           | 0.12      | 0.130435  |            | 0.0232558 |\n",
+      "| interactive-discover-1 | 0.0447761 | 0.0384615 | 0.0434783 | 0.0608696  | 0.0387597 |\n",
+      "| interactive-discover-2 | 0.335821  | 0.0769231 | 0.0869565 | 0.86087    | 0.395349  |\n",
+      "| interactive-discover-3 | 0.357692  | 0.448052  | 0.53271   | 0.605505   | 0.589286  |\n",
+      "| interactive-discover-4 | 0.0533333 | 0.133333  | 0.148148  | 0.0255319  | 0.0872483 |\n",
+      "| interactive-discover-5 | 0.0671642 | 0.0769231 | 0.0869565 | 0.0173913  | 0.124031  |\n",
+      "| interactive-discover-6 |           | 0.0769231 | 0.0869565 |            | 0.418605  |\n",
+      "| interactive-discover-7 |           | 0.115385  | 0.130435  |            | 0.0232558 |\n",
       "| interactive-discover-8 |           |           |           |            |           |\n",
-      "| interactive-short-1    | 0.0148148 | 0.0769231 | 0.0833333 | 0.00865801 | 0.0153846 |\n",
+      "| interactive-short-1    | 0.0148148 | 0.0740741 | 0.0833333 | 0.00865801 | 0.0153846 |\n",
       "| interactive-short-2    |           |           |           |            |           |\n",
       "| interactive-short-3    |           |           |           |            |           |\n",
       "| interactive-short-4    | 1         | 1         | 0.5       | 0.5        | 1         |\n",
-      "| interactive-short-5    | 0.0425532 | 0.0444444 | 0.0183486 | 0.0444444  | 0.0333333 |\n",
+      "| interactive-short-5    | 0.0425532 | 0.0434783 | 0.0181818 | 0.0444444  | 0.0333333 |\n",
       "| interactive-short-6    |           |           |           |            |           |\n",
       "| interactive-short-7    |           |           |           |            |           |\n"
      ]
