--- a/notebooks/query-containment-execution-time.ipynb
+++ b/notebooks/query-containment-execution-time.ipynb
@@ -67,59 +67,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{table}\n",
-      "\t\\begin{center}\n",
-      "\t\t\\begin{tabular}{|l|l|l|l|}\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tQuery Template & Average (ms) & std (ms) & max (ms) \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-1 & 0.062 & 0.073 & 0.539 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-2 & 0.106 & 0.461 & 4.655 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-3 & 0.040 & 0.034 & 0.133 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-4 & 0.043 & 0.068 & 0.672 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-5 & 0.015 & 0.015 & 0.025 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-6 & 0.068 & 0.039 & 0.174 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-7 & 0.041 & 0.101 & 1.005 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-8 & 0.033 & 0.045 & 0.426 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-1 & 0.074 & 0.064 & 0.560 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-2 & 0.309 & 0.327 & 2.791 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-3 & 0.072 & 0.069 & 0.650 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-4 & 0.042 & 0.032 & 0.144 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-5 & 0.043 & 0.057 & 0.551 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-6 & 0.132 & 0.343 & 3.473 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-7 & 0.176 & 0.158 & 0.971 \\\\\n",
-      "\t\t\t\\hline\n",
-      "\t\t\\end{tabular}\n",
-      "\t\\end{center}\n",
-      "\t\\caption{Query-Shape containment computation time is negligeable with the most restrictive shapes of our experiments.}\n",
-      "\t\\label{tab:queryShapeContainmentEval}\n",
-      "\\end{table}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<texttable.Texttable at 0x7f7ae5e5e1e0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "caption= \"Query-Shape containment computation time is negligeable with the most restrictive shapes of our experiments.\"\n",
     "label=\"tab:queryShapeContainmentEval\"\n",
     "table_1 = Texttable()\n",
-    "table_1.add_rows([head]+ rows)\n",
-    "print(latextable.draw_latex(table_1, caption=caption, label=label))"
+    "table_1.add_rows([head]+ rows)"
    ]
   },
   {
