fix caption ratio useful sources table

--- a/notebooks/validation_results.ipynb
+++ b/notebooks/validation_results.ipynb
@@ -208,6 +208,7 @@
     "                if n_results_type_index is not None:\n",
     "                    n_results_instance = n_results_by_version[version]\n",
     "                    res[instance.name][query_template][f\"v{version}\"] = {\n",
+    "                         \"base_line_results\": True,\n",
     "                        \"same_n_results\": n_results_type_index==n_results_instance\n",
     "                    }\n",
     "                    if not n_results_type_index==n_results_instance:\n",
@@ -1364,6 +1365,34 @@
    "source": [
     "res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b023ac20-c36f-4f6c-98b4-071c19e134b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = {}\n",
+    "to_exclude = []\n",
+    "for instance in evalInstances+[typeIndexLdpDataset]:\n",
+    "    res[instance.name] = {}\n",
+    "    for query_template, versions in instance.results.items():\n",
+    "        res[instance.name][query_template] = {}\n",
+    "        for version, repetitions in versions.items():\n",
+    "            if repetitions is None:\n",
+    "                continue\n",
+    "            consistent = internalResultConsistency(repetitions)\n",
+    "            if consistent == False:\n",
+    "                to_exclude.append({\n",
+    "                    \"instance_name\": instance.name,\n",
+    "                    \"query_template\": query_template,\n",
+    "                    \"version\": version\n",
+    "                })\n",
+    "                print(f\"instance {instance.name} on query {query_template} version {version} are not consistent\")\n",
+    "            res[instance.name][query_template][version] = {\"consistent\": consistent}\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -1382,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
