--- a/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
@@ -26,6 +26,6 @@
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Even with the shape index approach (denominator), most queries have a low percentage of useful resources acquired. In some cases, the type index with LDP (numerator) can produce a percentage of 100\%, whereas the shape index approach never produces a percentage as close to 100\%.}
+	\caption{Even with the shape index approach (denominator), most queries have a low percentage of useful resources acquired. In some cases, the type index with LDP (numerator) can produce a percentage of 100\%.}
 	\label{tab:ratioUsefulResources}
 \end{table}
