--- a/template_table_ratio_useful_resources.tex
+++ b/template_table_ratio_useful_resources.tex
@@ -6,25 +6,25 @@
 			\hline
             (\%) & SI  & T-LDP & SI & T-LDP & SI & T-LDP& SI & T-LDP & SI & T-LDP \\
             \hline
-			interactive-discover-1 & 7 & 4 & 6 & 4 & 6 & 4 & 42 & 6 & 7 & 4 \\
+			interactive-discover-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
             \hline
-            interactive-discover-2 & 35 & 34 & 11 & 8 & 11 & 9 & 91 & 86 & 42 & 40 \\
+            interactive-discover-2 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-3 & 37 & 36 & 47 & 45 & 55 & 53 & 62 & 61 & 60 & 59 \\
+            interactive-discover-3 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-4 & 13 & 5 & 19 & 13 & 19 & 15 & 3 & 3 & 20 & 9 \\
+            interactive-discover-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-5 & 8 & 7 & 11 & 8 & 11 & 9 & 2 & 2 & 13 & 12 \\
+            interactive-discover-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-6 & - & - & 7 & 8 & 7 & 9 & - & - & 41 & 42 \\
+            interactive-discover-6 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-7 & - & - & 10 & 12 & 11 & 13 & - & - & 2 & 2 \\
+            interactive-discover-7 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-short-1 & 12 & 1 & 12 & 7 & 12 & 8 & 12 & 1 & 12 & 2 \\
+            interactive-short-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-short-4 & 6 & 100 & 6 & 100 & 6 & 50 & 6 & 50 & 6 & 100 \\
+            interactive-short-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-short-5 & 11 & 4 & 11 & 4 & 11 & 2 & 11 & 4 & 4 & 3 \\
+            interactive-short-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
 		\end{tabular}
 	\end{center}
