best value in bold in the table

--- a/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
@@ -6,25 +6,25 @@
 			\hline
             (\%) & SI  & T-LDP & SI & T-LDP & SI & T-LDP& SI & T-LDP & SI & T-LDP \\
             \hline
-			interactive-discover-1 & 7 & 4 & 6 & 4 & 6 & 4 & 42 & 6 & 7 & 4 \\
+			interactive-discover-1 & \textbf{7} & 4 & \textbf{6} & 4 & \textbf{6} & 4 & \textbf{42} & 6 & \textbf{7} & 4 \\
             \hline
-            interactive-discover-2 & 35 & 34 & 11 & 8 & 11 & 9 & 91 & 86 & 42 & 40 \\
+            interactive-discover-2 & \textbf{35} & 34 & \textbf{11} & 8 & \textbf{11} & 9 & \textbf{91} & 86 & \textbf{42} & 40 \\
 			\hline
-            interactive-discover-3 & 37 & 36 & 47 & 45 & 55 & 53 & 62 & 61 & 60 & 59 \\
+            interactive-discover-3 & \textbf{37} & 36 & \textbf{47} & 45 & \textbf{55} & 53 & \textbf{62} & 61 & \textbf{60} & 59 \\
 			\hline
-            interactive-discover-4 & 13 & 5 & 19 & 13 & 19 & 15 & 3 & 3 & 20 & 9 \\
+            interactive-discover-4 & \textbf{13} & 5 & \textbf{19} & 13 & \textbf{19} & 15 & 3 & 3 & \textbf{20} & 9 \\
 			\hline
-            interactive-discover-5 & 8 & 7 & 11 & 8 & 11 & 9 & 2 & 2 & 13 & 12 \\
+            interactive-discover-5 & \textbf{8} & 7 & \textbf{11} & 8 & \textbf{11} & 9 & 2 & 2 & \textbf{13} & 12 \\
 			\hline
-            interactive-discover-6 & - & - & 7 & 8 & 7 & 9 & - & - & 41 & 42 \\
+            interactive-discover-6 & - & - & 7 & \textbf{8} & 7 & \textbf{9} & - & - & 41 & \textbf{42} \\
 			\hline
-            interactive-discover-7 & - & - & 10 & 12 & 11 & 13 & - & - & 2 & 2 \\
+            interactive-discover-7 & - & - & 10 & \textbf{12} & 11 & \textbf{13} & - & - & 2 & 2 \\
 			\hline
-            interactive-short-1 & 12 & 1 & 12 & 7 & 12 & 8 & 12 & 1 & 12 & 2 \\
+            interactive-short-1 & \textbf{12} & 1 & \textbf{12} & 7 & \textbf{12} & 8 & \textbf{12} & 1 & \textbf{12} & 2 \\
 			\hline
-            interactive-short-4 & 6 & 100 & 6 & 100 & 6 & 50 & 6 & 50 & 6 & 100 \\
+            interactive-short-4 & 6 & \textbf{100} & 6 & \textbf{100} & 6 & \textbf{50} & 6 & \textbf{50} & 6 & \textbf{100} \\
 			\hline
-            interactive-short-5 & 11 & 4 & 11 & 4 & 11 & 2 & 11 & 4 & 4 & 3 \\
+            interactive-short-5 & \textbf{11} & 4 & \textbf{11} & 4 & \textbf{11} & 2 & \textbf{11} & 4 & \textbf{4} & 3 \\
 			\hline
 		\end{tabular}
 	\end{center}
