shorten query templates

--- a/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
@@ -6,25 +6,25 @@
 			\hline
             (\%) & SI  & T-LDP & SI & T-LDP & SI & T-LDP& SI & T-LDP & SI & T-LDP \\
             \hline
-			interactive-discover-1 & \textbf{7} & 4 & \textbf{6} & 4 & \textbf{6} & 4 & \textbf{42} & 6 & \textbf{7} & 4 \\
+			discover-1 & \textbf{7} & 4 & \textbf{6} & 4 & \textbf{6} & 4 & \textbf{42} & 6 & \textbf{7} & 4 \\
             \hline
-            interactive-discover-2 & \textbf{35} & 34 & \textbf{11} & 8 & \textbf{11} & 9 & \textbf{91} & 86 & \textbf{42} & 40 \\
+            discover-2 & \textbf{35} & 34 & \textbf{11} & 8 & \textbf{11} & 9 & \textbf{91} & 86 & \textbf{42} & 40 \\
 			\hline
-            interactive-discover-3 & \textbf{37} & 36 & \textbf{47} & 45 & \textbf{55} & 53 & \textbf{62} & 61 & \textbf{60} & 59 \\
+            discover-3 & \textbf{37} & 36 & \textbf{47} & 45 & \textbf{55} & 53 & \textbf{62} & 61 & \textbf{60} & 59 \\
 			\hline
-            interactive-discover-4 & \textbf{13} & 5 & \textbf{19} & 13 & \textbf{19} & 15 & 3 & 3 & \textbf{20} & 9 \\
+            discover-4 & \textbf{13} & 5 & \textbf{19} & 13 & \textbf{19} & 15 & 3 & 3 & \textbf{20} & 9 \\
 			\hline
-            interactive-discover-5 & \textbf{8} & 7 & \textbf{11} & 8 & \textbf{11} & 9 & 2 & 2 & \textbf{13} & 12 \\
+            discover-5 & \textbf{8} & 7 & \textbf{11} & 8 & \textbf{11} & 9 & 2 & 2 & \textbf{13} & 12 \\
 			\hline
-            interactive-discover-6 & - & - & 7 & \textbf{8} & 7 & \textbf{9} & - & - & 41 & \textbf{42} \\
+            discover-6 & - & - & 7 & \textbf{8} & 7 & \textbf{9} & - & - & 41 & \textbf{42} \\
 			\hline
-            interactive-discover-7 & - & - & 10 & \textbf{12} & 11 & \textbf{13} & - & - & 2 & 2 \\
+            discover-7 & - & - & 10 & \textbf{12} & 11 & \textbf{13} & - & - & 2 & 2 \\
 			\hline
-            interactive-short-1 & \textbf{12} & 1 & \textbf{12} & 7 & \textbf{12} & 8 & \textbf{12} & 1 & \textbf{12} & 2 \\
+            short-1 & \textbf{12} & 1 & \textbf{12} & 7 & \textbf{12} & 8 & \textbf{12} & 1 & \textbf{12} & 2 \\
 			\hline
-            interactive-short-4 & 6 & \textbf{100} & 6 & \textbf{100} & 6 & \textbf{50} & 6 & \textbf{50} & 6 & \textbf{100} \\
+            short-4 & 6 & \textbf{100} & 6 & \textbf{100} & 6 & \textbf{50} & 6 & \textbf{50} & 6 & \textbf{100} \\
 			\hline
-            interactive-short-5 & \textbf{11} & 4 & \textbf{11} & 4 & \textbf{11} & 2 & \textbf{11} & 4 & \textbf{4} & 3 \\
+            short-5 & \textbf{11} & 4 & \textbf{11} & 4 & \textbf{11} & 2 & \textbf{11} & 4 & \textbf{4} & 3 \\
 			\hline
 		\end{tabular}
 	\end{center}
