--- a/template_table_ratio_useful_resources.tex
+++ b/template_table_ratio_useful_resources.tex
@@ -6,25 +6,25 @@
 			\hline
             (\%) & SI  & T-LDP & SI & T-LDP & SI & T-LDP& SI & T-LDP & SI & T-LDP \\
             \hline
-			interactive-discover-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+			discover-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
             \hline
-            interactive-discover-2 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-2 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-3 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-3 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-6 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-6 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-discover-7 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-7 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-short-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            short-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-short-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            short-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            interactive-short-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            short-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
 		\end{tabular}
 	\end{center}
