--- a/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
@@ -1,6 +1,6 @@
 \begin{table}[htbp]
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+		\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|}
 			\hline
             \multicolumn{1}{|c}{Query template/Version} & \multicolumn{2}{|c|}{v0} & \multicolumn{2}{|c|}{v1} & \multicolumn{2}{|c|}{v2} & \multicolumn{2}{|c|}{v3} & \multicolumn{2}{|c|}{v4} \\
 			\hline
