--- a/template_table_ratio_useful_resources.tex
+++ b/template_table_ratio_useful_resources.tex
@@ -6,31 +6,31 @@
 			\hline
             (\%) & SI  & T-LDP & SI & T-LDP & SI & T-LDP& SI & T-LDP & SI & T-LDP \\
             \hline
-			discover-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+			discover-1 (D1) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
             \hline
-            discover-2 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-2 (D2) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            discover-3 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-3 (D3) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            discover-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-4 (D4) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            discover-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-5 (D5) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            discover-6 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-6 (D6) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            discover-7 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            discover-7 (D7) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            short-1 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            short-1 (S1) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            short-4 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            short-4 (S4) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
-            short-5 & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
+            short-5 (S5) & {} & {} & {} & {} & {} & {} & {} & {} & {} & {} \\
 			\hline
 		\end{tabular}
 	\end{center}
 	\caption{
         For almost all queries, the percentage of useful resources dereferenced is low. 
-        However, the Shape Index (SI) approach consistently matches or outperforms the Type Index with LDP method (T-LDP) except for query S4, where T-LDP can achieves a 100\% dereferencing ratio.
-        }
+		SI consistently matches or outperforms the Type Index with LDP (T-LDP), except for templates D6, D7, and S4, where D6 and D7 underperform by ~1\%, and S4 achieves 100\% with T-LDP compared to 6\% with SI.
+		}
 	\label{tab:ratioUsefulResources}
 \end{table}
